--- a/customtextview/src/main/res/values/attrs.xml
+++ b/customtextview/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
         <attr name="android:paddingRight" />
         <attr name="android:paddingTop" />
         <attr name="android:paddingBottom" />
+        <attr name="android:onClick" />
         <attr name="lib_setRadius" format="dimension" />
         <attr name="lib_setRoundedView" format="boolean" />
         <attr name="lib_setRoundedBorderColor" format="color" />
@@ -18,15 +19,24 @@
             <enum name="rectangle" value="0" />
             <enum name="oval" value="1" />
         </attr>
+        <attr name="lib_setUnderLineText" format="boolean" />
+        <attr name="lib_setStrikeText" format="boolean" />
         <attr name="lib_setExpandableText" format="boolean" />
         <attr name="lib_setActionTextColor" format="color" />
         <attr name="lib_setActionTextVisible" format="boolean" />
         <attr name="lib_setTrimLines" format="integer" />
-        <attr name="lib_setTrimLength" format="integer" />
-        <attr name="lib_setTrimMode">
-            <enum name="trimModeLine" value="0" />
-            <enum name="trimModeLength" value="1" />
+        <attr name="lib_setCheckedText" format="boolean" />
+        <attr name="lib_setChecked" format="boolean" />
+        <attr name="lib_checkedDrawable" format="reference" />
+        <attr name="lib_unCheckedDrawable" format="reference" />
+        <attr name="lib_checkMarkTint" format="reference" />
+        <attr name="lib_checkedIconPosition" format="enum">
+            <enum name="left" value="0" />
+            <enum name="right" value="1" />
         </attr>
+        <attr name="lib_checkedDrawablePadding" format="dimension" />
+        <attr name="lib_setExpandHint" format="string" />
+        <attr name="lib_setCollapseHint" format="string" />
 
     </declare-styleable>
 
